[gd_scene load_steps=12 format=2]

[ext_resource path="res://spoo_world/assets/typography/Spooky Monster.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://spoo_world/world/Admin/edit_user.gd" type="Script" id=2]
[ext_resource path="res://spoo_world/assets/img/amarillo.png" type="Texture" id=3]
[ext_resource path="res://spoo_world/assets/img/Fondo.png" type="Texture" id=4]
[ext_resource path="res://spoo_world/assets/icon/arrow_1.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=4]
size = 30
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.8, 0.8, 0.8, 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
size = 80
outline_color = Color( 0.0627451, 0.0588235, 0.0588235, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 5
font_data = ExtResource( 1 )

[node name="edit_user" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 400 )
texture = ExtResource( 4 )

[node name="Panel" type="ColorRect" parent="Sprite"]
margin_left = -324.769
margin_top = -191.217
margin_right = 355.231
margin_bottom = 344.783
size_flags_stretch_ratio = 0.0
color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="actualizar" type="Button" parent="Sprite/Panel"]
anchor_left = 0.431829
anchor_top = -0.0622538
anchor_right = 0.552417
anchor_bottom = 0.0067761
margin_left = -51.8745
margin_top = 422.585
margin_right = 46.1255
margin_bottom = 472.585
custom_colors/font_color = Color( 0.027451, 0.027451, 0.027451, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/disabled = SubResource( 1 )
text = "ACTUALIZAR"
icon = ExtResource( 3 )
flat = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="apellido" type="Label" parent="Sprite/Panel"]
margin_left = 173.678
margin_top = 139.523
margin_right = 268.678
margin_bottom = 159.523
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Nombre:"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="apellido_input" type="TextEdit" parent="Sprite/Panel/apellido"]
margin_left = -2.32941
margin_top = 25.7377
margin_right = 319.671
margin_bottom = 65.7377
custom_constants/line_spacing = 8
custom_constants/completion_lines = -3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="nombre" type="Label" parent="Sprite/Panel"]
margin_left = 173.0
margin_top = 254.0
margin_right = 268.0
margin_bottom = 274.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "Apellido:"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="nombre_input" type="TextEdit" parent="Sprite/Panel/nombre"]
margin_left = -2.33337
margin_top = 27.054
margin_right = 323.667
margin_bottom = 67.054
custom_constants/line_spacing = 8
custom_constants/completion_lines = -3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.008
margin_left = 518.0
margin_top = 61.0
margin_right = 795.0
margin_bottom = 149.0
theme = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "EDITAR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="atras" type="Button" parent="."]
margin_left = 38.9998
margin_top = 36.0
margin_right = 176.0
margin_bottom = 204.0
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Sprite/Panel/actualizar" to="." method="_on_actualizar_pressed"]
[connection signal="pressed" from="atras" to="." method="_on_atras_pressed"]
